--- a/haquery.cabal
+++ b/haquery.cabal
@@ -18,11 +18,11 @@ cabal-version:       >=1.8
 library
   exposed-modules:     Haquery
   -- other-modules:       
-  build-depends:       base ==4.5.*,
-                       transformers == 0.3.0.0,
-                       split == 0.2.1.1,
-                       containers == 0.4.2.1,
-                       text == 0.11.2.3,
-                       parsec == 3.1.3,
-                       tagsoup == 0.12.8
+  build-depends:       base,
+                       transformers,
+                       split,
+                       containers,
+                       text,
+                       parsec,
+                       tagsoup
   hs-source-dirs:      src
