--- a/haquery.cabal
+++ b/haquery.cabal
@@ -5,20 +5,20 @@ name:                haquery
 version:             0.1.1.2
 synopsis:            jQuery for Haskell.
 -- description:         
-homepage:            https://github.com/recurziv/haquery
+homepage:            https://github.com/crufter/haquery
 license:             BSD3
 license-file:        LICENSE
-author:              Dobronszki Janos
-maintainer:          janosdobronszki@citromail.hu
+author:              Janos Dobronszki
+maintainer:          dobronszki@gmail.com
 -- copyright:           
-category:            Web
+category:            HTML
 build-type:          Simple
 cabal-version:       >=1.8
 
 library
   exposed-modules:     Haquery
   -- other-modules:       
-  build-depends:       base,
+  build-depends:       base >= 4.5 && < 4.7,
                        transformers,
                        split,
                        containers,
