--- a/haquery.cabal
+++ b/haquery.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                haquery
-version:             0.1.1.3
+version:             1.0.0.0
 synopsis:            jQuery for Haskell.
 -- description:         
 homepage:            https://github.com/crufter/haquery
@@ -18,13 +18,14 @@ cabal-version:       >=1.8
 library
   exposed-modules:     Haquery
   -- other-modules:       
-  build-depends:       base >= 4.5 && < 4.10,
+  build-depends:       base,
                        transformers,
                        split,
                        containers,
                        text,
                        parsec,
-                       tagsoup
+                       tagsoup,
+                       monad-loops
   hs-source-dirs:      src
 
 Test-Suite test-haquery
