--- a/haquery.cabal
+++ b/haquery.cabal
@@ -15,12 +15,13 @@ library
   exposed-modules:     Haquery
 
   build-depends:       base >= 4.5 && < 5,
-                       transformers,
-                       split,
-                       containers,
-                       text,
-                       parsec,
-                       tagsoup
+
+                       containers >= 0.6.5 && < 0.7,
+                       parsec >= 3.1.15 && < 3.2,
+                       transformers >= 0.5.6 && < 0.6,
+                       text >= 1.2.5 && < 1.3,
+                       split >= 0.2.3 && < 0.3,
+                       tagsoup >= 0.14.8 && < 0.15
   hs-source-dirs:      src
 
 Test-Suite test-haquery
@@ -31,5 +32,6 @@ Test-Suite test-haquery
     build-depends:  base,
                     haquery,
                     hspec,
-                    text
+                    text,
+                    process
     build-tool-depends: hspec-discover:hspec-discover == 2.*
