--- a/haquery.cabal
+++ b/haquery.cabal
@@ -10,6 +10,9 @@ maintainer:          dobronszki@gmail.com
 category:            HTML
 build-type:          Simple
 cabal-version:       >=1.8
+source-repository head
+  type: github
+  location: https://github.com/crufter/haquery
 
 library
   exposed-modules:     Haquery
@@ -31,7 +34,6 @@ Test-Suite test-haquery
     other-modules:  HaquerySpec
     build-depends:  base,
                     haquery,
-                    hspec,
-                    text,
-                    process
+                    hspec >=2.0 && <2.12,
+                    text
     build-tool-depends: hspec-discover:hspec-discover == 2.*
